tests/diagnostics/statements/control_flow/continue_outside_loop/expect.txt
# exit: 1
input/lib.coppice:2:5: error: continue can only be used inside a loop
      continue
      ^
